welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: not found: value nums
	for (x <- 0 to nums.length - 1 ) {
                       ^