welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	var y:Int =0
	for (x <- 0 to nums.length - 1 ) {
		if ( nums(x) < nums (x+1) ) { y= y+1}
	}
}
